# narrative-structure

./: .gitignore  PERF_ANALYSIS.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js
Projects/MyDocument_A/nodes/: .gitkeep
Projects/MyDocument_A/prompts/: .gitkeep
docs/: AGENT_OPERATION.md  AGENT_PROXY_BEST_PRACTICES.md  EVAL_QUEUE.md  MCP.md
scripts/: bench_perf.sh  init_db.py  test_mcp.sh
src/: App.css  App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tools.yaml
src-tauri/capabilities/: default.json
src-tauri/src/: db_engine.rs  lib.rs  main.rs  markdown_parser.rs  page_mapper.rs  pdf_render.rs  perf_test.rs  project_manager.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
src-tauri/src/ocr_adapter/: mineru.rs  mod.rs  opendataloader.rs
src/components/: AgentConsole.css  AgentConsole.tsx  Editor.css  Editor.tsx  FileExplorer.css  FileExplorer.tsx  LinesLayer.css  LinesLayer.tsx  LogPanel.css  LogPanel.tsx  MarkdownPreview.css  MarkdownPreview.tsx  PdfMirrorLayer.css  PdfMirrorLayer.tsx  PdfViewer.css  PdfViewer.tsx  PipelineStatus.css  PipelineStatus.tsx  TOC.css  TOC.tsx  ThemeProvider.tsx  Workspace.css  Workspace.tsx
src/components/ui/: badge.tsx  card.tsx  scroll-area.tsx
src/hooks/: useResizable.ts
src/lib/: agentProxy.ts  pageControllerBridge.ts
src/types/: dom-to-image-more.d.ts
